# BulkDelete

./: dune-project
lib/: dune
test/: dune
